# genesis-3d

./: .gitignore  Readme.initial.txt
Engine/: AUTHORS  CMakeLists.txt  CMake_And_BuildAndroid.bat  StandloneBuildAndroid.bat
Engine/CMake/: AndroidBuildConfig.cmake  AndroidToolChain.cmake  Macros.cmake  Options.cmake  WindowsBuildConfig.cmake
Engine/CSharpAssembly/: RegisterMonoModules.cpp
Engine/GameApp/GameApp.xcodeproj/: project.pbxproj
Engine/GenesisEngineLib/GenesisEngineLib/: GenesisEngineLib-Prefix.pch
Engine/GenesisEngineLib/GenesisEngineLib.xcodeproj/: project.pbxproj
Engine/IOSObjectC/IOSFramework/: AppDelegate.h  AppDelegate.mm  GenesisEngineIos-Info.plist  GenesisEngineIos-Prefix.pch  ViewController.h  ViewController.mm  main.mm
Engine/IOSObjectC/iosALSystem/: ALStoreKit.h  ALStoreKit.mm  iOSSystem.h  iOSSystem.mm
Engine/Licenses/: LICENSE_Ogg_Vorbis.txt  LICENSE_Opcode.txt  LICENSE_OpenAL.txt  LICENSE_curl.txt  LICENSE_flex.txt  LICENSE_freeimage.txt  LICENSE_freetype.txt  LICENSE_glsloptimizer.txt  LICENSE_hlsl2glslfork.txt  LICENSE_mojoshader.txt  LICENSE_mono.txt  LICENSE_mpg123.txt  LICENSE_mygui.txt  LICENSE_nebula3.txt  LICENSE_physx.txt  LICENSE_protobuf.txt  LICENSE_sqlite.txt  LICENSE_tinyxml.txt  LICENSE_zeromq.txt  Licenses_Genesis-3d.txt
Engine/Shell/: Genesis.cc  Genesis.h
Engine/addons/: CMakeLists.txt  stdneb.h
Engine/addons/ALSystem/: ALSystem.cc  ALSystem.h  CMakeLists.txt  InAppPurchase.cc  InAppPurchase.h
Engine/addons/animation/: Animation.cc  Animation.h  AnimationLayer.cc  AnimationLayer.h  AnimationServer.cc  AnimationServer.h  AnimationUtil.h  CMakeLists.txt  ClipControl.cc  ClipControl.h  animation_stdneb.cc  animation_stdneb.h  animationclip.cc  animationclip.h  animationnode.cc  animationnode.h
Engine/addons/guibase/: CMakeLists.txt  guibaseconfig.h  utf16string.cc  utf16string.h
Engine/addons/input/: CMakeLists.txt  input_fwd_decl.h  input_stdneb.cc  input_stdneb.h  inputchar.h  inputevent.h  inputeventtypes.cc  inputeventtypes.h  inputgamepad.cc  inputgamepad.h  inputhandler.cc  inputhandler.h  inputhardwaresource.cc  inputhardwaresource.h  inputkey.cc  inputkey.h  inputkeyboard.cc  inputkeyboard.h  inputmobileconfig.h  inputmouse.cc  inputmouse.h  inputmousebutton.cc  inputmousebutton.h  inputpriority.h  inputserver.cc  inputserver.h  inputsource.cc  inputsource.h  inputtouchscreen.cc  inputtouchscreen.h  inputwindowsource.cc  inputwindowsource.h  mobileinputevent.h  mobiletouchevent.h
Engine/addons/materialmaker/: CMakeLists.txt  GenesisMakeGPUProgram.cc  GenesisMakeGPUProgram.h  GenesisMakeMaterial.cc  GenesisMakeMaterial.h  GenesisMakePass.cc  GenesisMakePass.h  GenesisMakePass.mm  GenesisMakeTechnique.cc  GenesisMakeTechnique.h  GenesisMaterial.cc  GenesisMaterial.h  stdneb.cc  stdneb.h  unistd.h
Engine/addons/myguiengine/: CMakeLists.txt
Engine/addons/myguiplatforms/: CMakeLists.txt  MyGUI.GenesisPlatform.list
Engine/addons/particles/: CMakeLists.txt  particle.cc  particle.h  particle_classregistry.cc  particle_fwd_decl.h  particleaffector.cc  particleaffector.h  particleaffectorserialization.cc  particleemitter.cc  particleemitter.h  particleemitterserialization.cc  particlejob.cc  particlejob.h  particlepool.cc  particlepool.h  particleserver.cc  particleserver.h  particleserverserialization.cc  particlesystem.cc  particlesystem.h  particlesystemserialization.cc  particletarget.cc  particletarget.h  particletargetserialization.cc  particletechnique.cc  particletechnique.h  particletechniqueserialization.cc  pool.h
Engine/addons/resource/: CMakeLists.txt  DDS_Header.h  DXTextureDecompress.cc  DXTextureDecompress.h  DataChunkPacket.h  ETC_Header.cc  ETC_Header.h  FloatsCompression.cc  FloatsCompression.h  PVRTC_Header.h  UnsignedIntPacking.cc  UnsignedIntPacking.h  UnsignedIntUnpacking.cc  UnsignedIntUnpacking.h  animationres.cc  animationres.h  animationresloader.cc  animationresloader.h  animationressaver.cc  animationressaver.h  audiores.cc  audiores.h  audioresloader.cc  audioresloader.h  audioressaver.cc  audioressaver.h  imageoperations.cc  imageoperations.h  imageres.cc  imageres.h  imageresloader.cc  imageresloader.h  materialres.cc  materialres.h  materialresloader.cc  materialresloader.h  materialressaver.cc  materialressaver.h  meshSpliter.cc  meshSpliter.h  (+53 more)
Engine/addons/serialization/: CMakeLists.txt  binaryserialize.cc  binaryserialize.h  serialize.cc  serialize.h  serializeserver.cc  serializeserver.h  xmserialize.cc  xmserialize.h
Engine/addons/shadercompiler/: CMakeLists.txt  ShaderAnalyzer.cc  ShaderAnalyzer.h  ShaderCompiler.cc  ShaderCompiler.h  ShaderCompilerSetting.cc  ShaderCompilerSetting.h  ShaderData.cc  ShaderData.h  ShaderElement.cc  ShaderElement.h  ShaderFactory.cc  ShaderFactory.h  stdneb.cc  stdneb.h
Engine/addons/soundsystem/: CMakeLists.txt  CWaves.cc  CWaves.h  Framework.cc  Framework.h  GenesisSound.h  LoadOAL.cc  LoadOAL.h  LoadOAL_IOS.cpp  SoundBuffer.h  (+17 more)
Engine/app/: CMakeLists.txt  app_classregistry.cc  stdneb.cc  stdneb.h
Engine/extlibs/: CMakeLists.txt  stdneb.h
Engine/foundation/: CMakeLists.txt  genesisfoundation.h  stdneb.h
Engine/graphicsystem/: CMakeLists.txt  GraphicObjectManager.cc  GraphicObjectManager.h  GraphicSystem.cc  GraphicSystem.h  RenderUnit.cc  RenderUnit.h  ViewPortWindow.cc  ViewPortWindow.h  stdneb.cc  stdneb.h
Engine/packageTool/: CMakeLists.txt  FileData.cc  FileData.h  FileFormat.h  FileTable.cc  FileTable.h  PackDef.h  Package.cc  Package.h  PackageSystem.cc  PackageSystem.h  PackageTool.cc  PackageTool.h  PackageUtil.cc  PackageUtil.h
Engine/players/: CMakeLists.txt  stdneb.cc  stdneb.h
Engine/profilesystem/: CMakeLists.txt  DeviceStats.cc  DeviceStats.h  ProfileDef.h  ProfileSystem.cc  ProfileSystem.h  TickStats.cc  TickStats.h
Engine/rendersystem/: CMakeLists.txt  RenderMessageProtocol.cc  RenderMessageProtocol.h  RenderMessageProtocol.nidl  RenderSystem.cc  RenderSystem.h  RenderSystemMessageHandler.cc  RenderSystemThreadHandler.cc  RenderSystemThreadHandler.h  stdneb.cc  stdneb.h
Engine/tools/: CMakeLists.txt
(+2504 files in other folders)
