#****************************************************************************
# Copyright (c) 2011-2013,WebJet Business Division,CYOU
#  
# http://www.genesis-3d.com.cn
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#****************************************************************************

##################################################################################
# addons folder
##################################################################################

#sub directories
ADD_SUBDIRECTORY( animation )

ADD_SUBDIRECTORY( input )

ADD_SUBDIRECTORY( particles )

ADD_SUBDIRECTORY( serialization )

ADD_SUBDIRECTORY( shadercompiler )

ADD_SUBDIRECTORY( resource )

ADD_SUBDIRECTORY( vis )

ADD_SUBDIRECTORY( materialmaker )

ADD_SUBDIRECTORY( vegetation )

ADD_SUBDIRECTORY( terrainsystem )

ADD_SUBDIRECTORY( guibase )

ADD_SUBDIRECTORY( myguiengine )

ADD_SUBDIRECTORY( myguiplatforms )

ADD_SUBDIRECTORY( soundsystem )

ADD_SUBDIRECTORY( sprite )

ADD_SUBDIRECTORY( ALSystem )

